--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,37 +6,42 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: UM.haberes.aud.rest CI
+name: UM.haberes.auditoria-service CI
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-    
+
 jobs:
   build:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn clean install
-      
-    - uses: mr-smithers-excellent/docker-build-push@v6
-      name: Build & push Docker image
-      env:
-        VERSION: 8.7.8
-      with:
-        image: dqmdz/um.haberes.aud
-        tags: ${VERSION}, latest, "${GITHUB_REF#refs/heads/}.$(git rev-parse --short ${GITHUB_SHA})"
-        registry: docker.io
-        dockerfile: Dockerfile
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Build with Maven
+        run: mvn clean verify install -DskipTests
+
+      - name: Set VERSION environment variable
+        id: version
+        run: echo "VERSION=v$(date +'%Y.%m.%d')-build${{ github.run_number }}" >> $GITHUB_ENV
+
+      - name: Build & push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v6
+        with:
+          image: ${{ secrets.DOCKER_IMAGE_NAME }}
+          tags: ${{ env.VERSION }}, latest, "${GITHUB_REF#refs/heads/}.$(git rev-parse --short ${GITHUB_SHA})"
+          registry: docker.io
+          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
