feat: add documentation generation, security config, and upgrade dependencies
Adds GitHub Actions workflow for automated documentation generation including dependency tree and project diagrams.

Introduces Spring Security configuration with basic authentication for Swagger UI endpoints.

Upgrades Spring Boot to 4.0.0-M3, Java to 25, and various dependencies including MySQL connector and SpringDoc OpenAPI.

Adds SonarCloud integration properties and JaCoCo coverage reporting.

Removes deprecated logback-spring.xml configuration and replaces with application banner.

BREAKING CHANGE: Spring Boot upgrade to 4.0.0-M3 may introduce compatibility issues; test thoroughly before deployment.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,17 @@ app:
   database: haberes.aud
   user: root
   password: root
+  swagger_user: admin
+  swagger_password: password
 
 server:
   port: ${app.port}
 
 spring:
+  security:
+    user:
+      name: ${app.swagger_user}
+      password: ${app.swagger_password}
   datasource:
     url: jdbc:mysql://${app.server}/${app.database}?useSSL=false&serverTimezone=UTC
     username: ${app.user}
